--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mongoose": "^8.8.4"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3"
   }
 }
