--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
     networks:
       - book-network
+      - ms-network
     restart: unless-stopped
     command: >
       sh -c "
@@ -41,6 +42,7 @@ services:
       - mongo-data:/data/db
     networks:
       - book-network
+      - ms-network
     command: --quiet
     healthcheck:
       test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
@@ -71,6 +73,8 @@ networks:
   book-network:
     external: true
     name: book-network
+  ms-network:
+    external: true
 
 volumes:
   mongo-data:
